--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,35 +14,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.162" />
 
     <ImageView
         android:id="@+id/donut_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="137dp"
+        android:layout_width="253dp"
+        android:layout_height="300dp"
         android:layout_marginTop="41dp"
-        android:layout_marginEnd="146dp"
         android:layout_marginBottom="187dp"
         android:clickable="true"
         android:contentDescription="@string/bottom_sheet_behavior"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/full_donut"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/counter"
-        tools:srcCompat="@drawable/ic_launcher_background" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:layout_marginTop="171dp"
-        android:layout_marginEnd="221dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="0.208"
+        tools:srcCompat="@drawable/full_donut" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
