--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -100,7 +100,7 @@
         android:layout_marginTop="119dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="233dp"
-        android:clickable="true"
+        android:clickable="false"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
